actualizacion de persistencia en auth

--- a/EcoembesV2_SD-1/build.gradle
+++ b/EcoembesV2_SD-1/build.gradle
@@ -5,8 +5,8 @@ plugins {
 }
 
 group = 'es.deusto.sd.ecoembes'
-version = '0.0.1-SNAPSHOT'
-description = 'Proyecto de Ecoembes Prototipo 1'
+version = '2.0'
+description = 'Proyecto de Ecoembes Prototipo 2'
 
 java {
 	toolchain {
@@ -24,10 +24,5 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 	implementation 'io.swagger.core.v3:swagger-annotations:2.2.15'
 	runtimeOnly 'com.h2database:h2'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
-
-tasks.named('test') {
-	useJUnitPlatform()
+	
 }
