--- a/EcoembesV2_SD-1/src/main/resources/application.properties
+++ b/EcoembesV2_SD-1/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=EcoembesV2_SD-1
+
+# Configuración de Base de Datos H2 (En memoria)
+spring.datasource.url=jdbc:h2:mem:ecoembesdb;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Habilitar la consola H2 en /h2-console
+spring.h2.console.enabled=true
+
+# Crear o actualizar el esquema de tablas automáticamente al inicio
+spring.jpa.hibernate.ddl-auto=update
+
+# Mostrar las consultas SQL en la consola (útil para depurar)
+spring.jpa.show-sql=true
