--- a/EcoembesV2_SD-1/src/main/resources/application.properties
+++ b/EcoembesV2_SD-1/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=EcoembesV2_SD-1
-
+server.port=9000
 # Configuración de Base de Datos H2 (En memoria)
 spring.datasource.url=jdbc:h2:mem:ecoembesdb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
